<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_mock"
        android:layout_width="78dp"
        android:layout_height="68dp"
        android:onClick="onMockClick"
        android:text="MOCK"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.009" />

    <Button
        android:id="@+id/button_fav"
        android:layout_width="165dp"
        android:layout_height="65dp"
        android:onClick="onFavClick"
        android:text="FAVORITES"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <TextView
        android:id="@+id/bof_title"
        android:layout_width="145dp"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="BoFs"
        android:textSize="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="78dp"
        android:layout_height="68dp"
        android:onClick="onStartClick"
        android:text="START"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintVertical_bias="0.009" />


    <Spinner
        android:id="@+id/session_spinner"
        android:layout_width="206dp"
        android:layout_height="0dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="436dp"
        android:textAlignment="textEnd"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/choose_session_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:text="Load Past Session"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bof_title" />

    <Button
        android:id="@+id/go_to_past_session_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="359dp"
        android:onClick="onLoadClicked"
        android:text="Load"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_session_label"
        app:layout_constraintVertical_bias="0.859" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="38dp"
        android:clickable="true"
        android:onClick="onGoToProfileClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/profilepic" />

<!--    <Spinner-->
<!--        android:id="@+id/year_spinner"-->
<!--        android:layout_width="203dp"-->
<!--        android:layout_height="28dp"-->
<!--        android:layout_marginEnd="28dp"-->
<!--        android:textAlignment="textEnd"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        tools:layout_editor_absoluteY="100dp" />-->

</androidx.constraintlayout.widget.ConstraintLayout>