...
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profile_picture_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="155dp"
        android:layout_marginEnd="101dp"
        android:ems="10"
...
        android:hint="Enter Picture URL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload_profile_url" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="172dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="#31a037"
        android:onClick="submitClick"
...
